--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,14 @@ dependencies:
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.2
   cloud_firestore: ^4.8.4
+
+  google_sign_in: ^6.1.2
+
   equatable: ^2.0.5
   dartz: ^0.10.1
+
+  get_it: ^7.6.0
+  go_router: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,6 +52,7 @@ dev_dependencies:
     sdk: flutter
   fake_cloud_firestore: ^2.4.1+1
   firebase_auth_mocks: ^0.12.0
+  google_sign_in_mocks: ^0.3.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
